--- a/game.html
+++ b/game.html
@@ -7,6 +7,11 @@
       <link rel="stylesheet" href="game.css">
 </head>
 <body>
+      <div class="msg-container  hide">
+<p id="msg">Winner</p>
+<button id ="new-btn">new game</button>
+      </div>
+
       <h1>tic tak toe</h1>
  <div class="container">
       <div class="game">
@@ -25,6 +30,7 @@
       </div>
  </div>
  <button id="reset-btn" >reset game</button>
-</body>
 <script src="game.js"></script>
+
+</body>
 </html>
